three weeks of mirth